--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -42,7 +42,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/LOGO_JUEGO/MANA_RANGERS_LOGO.png"/>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>
+                <!--<p class="masthead-subheading font-weight-light mb-0"><i>"Los elementos están de nuestra parte."</i></p>-->
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -65,27 +65,6 @@
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                 </div>
-            </div>
-        </section>
-        <!-- About services -->
-        <section class="page-section bg-primary text-white mb-0" id="elementos">
-            <div class="container">
-                <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Nuestros servicios</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- About Section Content-->
-                <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">Desarrollamos juegos entretenidos y educativos</p></div>
-                </div>
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                </div>
-                
                 <div class="container">
                     <div class="row">
                         <!-- Footer Location-->
@@ -113,32 +92,67 @@
                         </div>
                     </div>
                 </div>
-
-                
-                <!-- About Section Button-->
-                 <!--<div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fas fa-download me-2"></i>
-                        Contactar ahora >
-                    </a>
-                </div> -->
+            </div>
+        </section>
+        <!-- About services -->
+        <section class="page-section bg-primary text-white mb-0" id="elementos">
+            <div class="container">
+                <!-- About Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">ELEMENTOS</h2>
+                <!-- Icon Divider-->
+                <div class="divider-custom divider-light">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
+                <!-- About Section Content-->
+                <div class="text-center mt-4">
+                    <div class="text-center mt-4"><p class="lead">Hay un total de cuatro elementos este mundo que se pueden aprovechar para muchas actividades. Estos elementos son:</p></div>
+                    <div class="container">
+                    <div class="row">
+                        <!-- Footer Location-->
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">Agua</h4>
+                            <img src="assets/Elementos/elementoagua.png" alt="...">
+                        </div>
+                        <!-- Footer Social Icons-->
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">Fuego</h4>
+                            <img src="assets/Elementos/fire.png" alt="...">
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">Tierra</h4>
+                            <img src="assets/Elementos/earth.png" alt="...">
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">Aire</h4>
+                            <img src="assets/Elementos/wind.png" alt="...">
+                        </div>
+                    </div>
+                </div>
+                    <div class="divider-custom divider-light">
+                        <div class="divider-custom-line"></div>
+                    </div>
+                    <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
+                    <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud</p></div>
+                    <div class="row">
+                        <div><img src="assets/Fabricas/Fábrica.png" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryFuego" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryTierra.png" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryAire.png" alt="..."></div>
+                    </div>
+                </div>      
             </div>
         </section>
         <!-- Proyect sesion-->
         <section class="page-section portfolio" id="personajes">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Proyectos destacados</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Personajes</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <div class="text-center mt-4">
-                    <div class="text-center mt-4"><p class="lead">Estos son los productos en los que hemos estado trabajando.</p></div>
-                </div>
-                <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Portfolio Grid Items-->
@@ -186,15 +200,6 @@
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
                             <img class="img-fluid" src="assets/Daniel_Bermejo.png" alt="..." />
-                        </div>
-                    </div>
-                    <!-- Portfolio Item 6-->
-                    <div class="col-md-6 col-lg-4">
-                        <div class="portfolio-item mx-auto" data-bs-toggle="modal" data-bs-target="#portfolioModal6">
-                            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-                                <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
-                            </div>
-                            <img class="img-fluid" src="assets/Yago_Ortiz.jpg" alt="..." />
                         </div>
                     </div>
                 </div>
