--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -62,32 +62,31 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Este juego ha sido creado con la intención de crear un experiencia basada en el pensamiento computacional.</p></div>
                 </div>
-                <div class="divider-custom">
+                 <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="container">
                     <div class="row">
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Videojuegos <br/> baratos</h4>
+                            <h4 class="text-center mt-4">Gestión de recursos</h4>
                             <p class="text-center mt-4">
-                                <!--2215 John Daniel Drive
-                                <br />
-                                Clark, MO 65243-->
-                                Desarrollamos videojuegos que económicamente estén al alcance de todos.
+                                Las fábricas producen recursos elementales que ayudarán a que los enemigos no puedan avanzar usándolos para crear aliados que nos ayuden o creando más fábricas para obtener recursos más rápido.
                             </p>
                         </div>
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Compromiso <br/> de calidad</h4>
+                            <h4 class="text-center mt-4">Variedad de personajes</h4>
                             <p class="text-center mt-4">
-                                Nos comprometemos a ofrecer un producto innovador y de buena calidad.
+                                Hay diversos aliados dependiendo de su elemento carcaterítico con diferentes mecánicas que se pueden utilizar como estrategia para avanzar en la defensa del reino de Hud.
                             </p>
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Opciones para <br/> instituciones escolares</h4>
+                            <h4 class="text-center mt-4">Humor y estilo caricaturesco</h4>
                             <p class="text-center mt-4">
-                                Nuestros productos vienen con paquetes especiales para ofrecer a escuelas, institutos, etc.
+                                El juego tiene una personalidad cómica y divertida al estilo de los dibujos animados.
                             </p>
                         </div>
                     </div>
@@ -113,20 +112,20 @@
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Agua</h4>
-                            <img src="assets/Elementos/elementoagua.png" alt="...">
+                            <img src="assets/Elementos/elementoagua.png" width="200" height="200" alt="...">
                         </div>
                         <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Fuego</h4>
-                            <img src="assets/Elementos/fire.png" alt="...">
+                            <img src="assets/Elementos/fire.png" width="200" height="200" alt="...">
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Tierra</h4>
-                            <img src="assets/Elementos/earth.png" alt="...">
+                            <img src="assets/Elementos/earth.png" width="200" height="200" alt="...">
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Aire</h4>
-                            <img src="assets/Elementos/wind.png" alt="...">
+                            <img src="assets/Elementos/wind.png" width="200" height="200" alt="...">
                         </div>
                     </div>
                 </div>
@@ -136,10 +135,10 @@
                     <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
                     <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud</p></div>
                     <div class="row">
-                        <div><img src="assets/Fabricas/Fábrica.png" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryFuego" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryTierra.png" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryAire.png" alt="..."></div>
+                        <div><img src="assets/Fabricas/Fábrica.png" width="200" height="200" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryFuego" width="200" height="200" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="..."></div>
+                        <div><img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="..."></div>
                     </div>
                 </div>      
             </div>
