--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -86,7 +86,7 @@
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Humor y estilo caricaturesco</h4>
                             <p class="text-center mt-4">
-                                El juego tiene una personalidad cómica y divertida al estilo de los dibujos animados.
+                                El juego tiene una personalidad cómica y divertida al estilo de los dibujos animados para que la experiencia sea más graciosa y entretenida.
                             </p>
                         </div>
                     </div>
@@ -134,12 +134,12 @@
                     </div>
                     <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
                     <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud</p></div>
-                    <div class="row">
-                        <div><img src="assets/Fabricas/Fábrica.png" width="200" height="200" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryFuego" width="200" height="200" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="..."></div>
-                        <div><img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="..."></div>
-                    </div>
+                    
+                    <div><img src="assets/Fabricas/Fábrica.png" width="200" height="200" alt="..."></div>
+                    <div><img src="assets/Fabricas/factoryFuego.png" width="200" height="200" alt="..."></div>
+                    <div><img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="..."></div>
+                    <div><img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="..."></div>
+                    
                 </div>      
             </div>
         </section>
