--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -108,7 +108,7 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Hay un total de cuatro elementos este mundo que se pueden aprovechar para muchas actividades. Estos elementos son:</p></div>
                     <div class="container">
-                    <div class="row">
+                    <div class="row" text-align: center>
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Agua</h4>
@@ -120,7 +120,7 @@
                             <img src="assets/Elementos/fire.png" width="300" height="300" alt="...">
                         </div>
                     </div>
-                     <div class="row">
+                     <div class="row" text-align: center>
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Tierra</h4>
                             <img src="assets/Elementos/earth.png" width="300" height="300" alt="...">
