--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -108,10 +108,10 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Hay un total de cuatro elementos este mundo que se pueden aprovechar para muchas actividades. Estos elementos son:</p></div>
                     <div class="container">
-                    <div class="row" text-align: center>
+                    <div class="row" text-align=center>
                         <!-- Footer Location-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Agua</h4>
+                            <h4 class="text-center mt-4">Agua lol</h4>
                             <img src="assets/Elementos/elementoagua.png" width="300" height="300" alt="...">
                         </div>
                         <!-- Footer Social Icons-->
