--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -120,7 +120,7 @@
                             <img src="assets/Elementos/fire.png" width="300" height="300" alt="...">
                         </div>
                     </div>
-                     <div class="row" text-align: center>
+                     <div class="row" text-align = center>
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Tierra</h4>
                             <img src="assets/Elementos/earth.png" width="300" height="300" alt="...">
