--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -84,7 +84,7 @@
                             </p>
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Humor y estilo caricaturesco</h4>
+                            <h4 class="text-center mt-4">Humor y caricatura</h4>
                             <p class="text-center mt-4">
                                 El juego tiene una personalidad cómica y divertida al estilo de los dibujos animados para que la experiencia sea más graciosa y entretenida.
                             </p>
@@ -108,19 +108,15 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Hay un total de cuatro elementos este mundo que se pueden aprovechar para muchas actividades. Estos elementos son:</p></div>
                     <div class="container">
-                    <div class="row" text-align=center>
-                        <!-- Footer Location-->
+                    <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Agua lol</h4>
                             <img src="assets/Elementos/elementoagua.png" width="300" height="300" alt="...">
                         </div>
-                        <!-- Footer Social Icons-->
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Fuego</h4>
                             <img src="assets/Elementos/fire.png" width="300" height="300" alt="...">
                         </div>
-                    </div>
-                     <div class="row" text-align = center>
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">Tierra</h4>
                             <img src="assets/Elementos/earth.png" width="300" height="300" alt="...">
@@ -129,7 +125,7 @@
                             <h4 class="text-center mt-4">Aire</h4>
                             <img src="assets/Elementos/wind.png" width="300" height="300" alt="...">
                         </div>
-                      </div>
+                    </div>
                     </div>
                 </div>
                     <div class="divider-custom divider-light">
