--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -110,19 +110,19 @@
                     <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Agua lol</h4>
+                            <h4 class="text-center mt-4">AGUA</h4>
                             <img src="assets/Elementos/elementoagua.png" width="300" height="300" alt="...">
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Fuego</h4>
+                            <h4 class="text-center mt-4">FUEGO</h4>
                             <img src="assets/Elementos/fire.png" width="300" height="300" alt="...">
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Tierra</h4>
+                            <h4 class="text-center mt-4">TIERRA</h4>
                             <img src="assets/Elementos/earth.png" width="300" height="300" alt="...">
                         </div>
                         <div class="col-lg-4 mb-5 mb-lg-0">
-                            <h4 class="text-center mt-4">Aire</h4>
+                            <h4 class="text-center mt-4">AIRE</h4>
                             <img src="assets/Elementos/wind.png" width="300" height="300" alt="...">
                         </div>
                     </div>
