--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -131,14 +131,30 @@
                     <div class="divider-custom divider-light">
                         <div class="divider-custom-line"></div>
                     </div>
+                    <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">El reino de Hud es un mundo mágico en el que la paz no reina desde hace mucho tiempo. En las afueras del reino, el rey mandó construir una gran muralla de piedra para evitar que los enemigos atacaran el reino rápidamente. Dentro de los límites del reino se organizan cuatro generadores de recursos que ayudarán a acabar con los enemigos y, fue de ésta, se podrán construir fábricas adicionales.</p></div>
                     <div class="text-center mt-4"><p class="lead">Estas fábricas generan los recursos elementales necesarios para construir fábricas adicionales o crear aliados que protejan al reino de Hud</p></div>
-                    
-                    <div><img src="assets/Fabricas/Fábrica.png" width="200" height="200" alt="..."></div>
-                    <div><img src="assets/Fabricas/factoryFuego.png" width="200" height="200" alt="..."></div>
-                    <div><img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="..."></div>
-                    <div><img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="..."></div>
-                    
+                    <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">AGUA</h4>
+                            <img src="assets/Fabricas/Fábrica.png" width="200" height="200" alt="...">
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">FUEGO</h4>
+                            <img src="assets/Fabricas/factoryFuego.png" width="200" height="200" alt="...">
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">TIERRA</h4>
+                            <img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="...">
+                        </div>
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <h4 class="text-center mt-4">AIRE</h4>
+                            <img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="...">
+                        </div>
+                    </div>
+                    </div>
+                </div>
                 </div>      
             </div>
         </section>
