--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -144,6 +144,9 @@
                             <h4 class="text-center mt-4">FUEGO</h4>
                             <img src="assets/Fabricas/factoryFuego.png" width="200" height="200" alt="...">
                         </div>
+                    </div>
+
+                        <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">TIERRA</h4>
                             <img src="assets/Fabricas/factoryTierra.png" width="200" height="200" alt="...">
@@ -153,6 +156,7 @@
                             <img src="assets/Fabricas/factoryAire.png" width="200" height="200" alt="...">
                         </div>
                     </div>
+                        
                     </div>
                 </div>
                 </div>      
