--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -117,6 +117,8 @@
                             <h4 class="text-center mt-4">FUEGO</h4>
                             <img src="assets/Elementos/fire.png" width="100" height="100" alt="...">
                         </div>
+                    </div>
+                        <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
                             <h4 class="text-center mt-4">TIERRA</h4>
                             <img src="assets/Elementos/earth.png" width="100" height="100" alt="...">
