--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -183,7 +183,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/Daniel_Alvarez.png" alt="..." />
+                            <img class="img-fluid" src="assets/Aliados/BuhoInsta.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 2-->
@@ -192,7 +192,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/Mauricio_Fernandez.png" alt="..." />
+                            <img class="img-fluid" src="assets/Aliados/OvejaInsta.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 3-->
@@ -201,7 +201,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/NoeliaN_Maqueda.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/Aliados/cangrejorocaInsta.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 4-->
@@ -210,7 +210,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/Gonzalo_DeLaTorre.jpg" alt="..." />
+                            <img class="img-fluid" src="assets/Aliados/ranaInsta.png" alt="..." />
                         </div>
                     </div>
                     <!-- Portfolio Item 5-->
@@ -219,7 +219,7 @@
                             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
                                 <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
-                            <img class="img-fluid" src="assets/Daniel_Bermejo.png" alt="..." />
+                            <img class="img-fluid" src="assets/Aliados/demonInsta.png" alt="..." />
                         </div>
                     </div>
                 </div>
@@ -240,13 +240,6 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Si tienes alguna pregunta o algo de lo que informarnos, no dudes en contactar con nosotros para darte una solución o mejorar la experiencia de la comunidad.</p></div>
                 </div>
-                <!-- About Section Button-->
-                 <!--<div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fas fa-download me-2"></i>
-                        Contactar ahora >
-                    </a>
-                </div> -->
             </div>
         </section>
         <!-- Contact Section-->
@@ -263,13 +256,6 @@
                 <!-- Contact Section Form-->
                 <div class="row justify-content-center">
                     <div class="col-lg-8 col-xl-7">
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
@@ -348,7 +334,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Daniel Álvarez Franco</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">FÉNIX</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -356,11 +342,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Daniel_Alvarez.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/Buhopng.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un apasionado desarrollador de software con experiencia en la creación de soluciones técnicas innovadoras y efectivas. Mi enfoque se centra en la programación, la resolución de problemas y la mejora continua.</p>
-                                    <p class="mb-4">Experiencia: programación avanzada, desarrollo web, gestión de base de datos y automatización y scripts.</p>
-                                    <p class="mb-4">Correo: d.alvarez.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -382,7 +366,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Mauricio Fernández Rojas</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">TANNGS</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -390,11 +374,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Mauricio_Fernandez.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/Aliado.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy diseñador con un ojo creativo y un compromiso inquebrantable con la estética visual. Mi misión es transformar mis ideas en elementos visuales cautivadores y funcionales que contribuyan a la identidad de marca y narrativa de un prooyecto.</p>
-                                    <p class="mb-4">Experiencia: diseño gráfico, ilustración digital, animación, Motion Graphics y diseño de redes sociales.</p>
-                                    <p class="mb-4">Correo: m.fernandezr.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -416,7 +398,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Noelia Nayara Maqueda Soto</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">CARCINOS</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -424,7 +406,7 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/NoeliaN_Maqueda.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/cangrejorocaPNG" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy una diseñadora creativa y multifacética con un enfoque en la creación de experiencias visuales excepcionales para aplicaciones y juegos. Mi experiencia abarca tres áreas fundamentales: diseño de interfaz de usuario (UI), diseño y desarrollo de portfolios y creación de Game Design Document (GDD).</p>
                                     <p class="mb-4">Experiencia: diseño de interfaces intuitivas, creación de portfolios, creación de GDDs y elaboración de diagramas de flujo.</p>
@@ -450,7 +432,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Gonzalo de la Torre Ruíz</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">KAPPA</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -458,11 +440,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Gonzalo_DeLaTorre.jpg" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/ranapng.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un aficionado a los videojuegos, y me he dedicado a explorar gran diversidad de mundos inmersivos gracias a sus audios e historias. Busco aprender a trasmitir ese sentimiento a través de mis audios y mi portfolio es mi forma de expresarlo.</p>
-                                    <p class="mb-4">Experiencia: técnico de música y sonido.</p>
-                                    <p class="mb-4">Correo: g.delatorre.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
@@ -484,7 +464,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Daniel Bermejo Valverde</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">DEMON</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -492,11 +472,9 @@
                                         <div class="divider-custom-line"></div>
                                     </div>
                                     <!-- Portfolio Modal - Image-->
-                                    <img class="img-fluid rounded mb-5" src="assets/Daniel_Bermejo.png" alt="..." />
+                                    <img class="img-fluid rounded mb-5" src="assets/Aliados/demonInsta.png" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">Soy un amante de los videojuegos con experiencia en programación, centrado principalmente en el backend, busco crear videojuegos que transmitan mi amor por este medio además de crear experiencias diferentes y apasionantes.</p>
-                                    <p class="mb-4">Experiencia: técnico superior de desarrollo de aplicaciones multiplataforma y backend.</p>
-                                    <p class="mb-4">Correo: d.bermejo.2020@alumnos.urjc.es</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Cerrar ventana
