--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -240,6 +240,13 @@
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Si tienes alguna pregunta o algo de lo que informarnos, no dudes en contactar con nosotros para darte una solución o mejorar la experiencia de la comunidad.</p></div>
                     <div><p><a href="index.html">HAPPY HYPPO STUDIO</a></p></div>
+                    <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-4 mb-5 mb-lg-0">
+                            <img src="assets/HappyHippo.png" width="250" height="250" alt="...">
+                        </div>
+                    </div>  
+                    </div>
                 </div>
             </div>
         </section>
