--- a/mana_rangers.html
+++ b/mana_rangers.html
@@ -239,7 +239,7 @@
                 <!-- About Section Content-->
                 <div class="text-center mt-4">
                     <div class="text-center mt-4"><p class="lead">Si tienes alguna pregunta o algo de lo que informarnos, no dudes en contactar con nosotros para darte una solución o mejorar la experiencia de la comunidad.</p></div>
-                    <div><p><a href="index.html">HAPPY HYPPO STUDIO</a></p></div>
+                    <div><h4><a href="index.html"><b>HAPPY HYPPO STUDIO</b></a></h4></div>
                     <div class="container">
                     <div class="row justify-content-center">
                         <div class="col-lg-4 mb-5 mb-lg-0">
